--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,13 @@
 name: app_service
 description: App service based on GetX library.
 
-version: 2.0.0
-
+version: 3.0.0
+auth:
+  name: Jcak Lee
+  email: 291148484@163.com
+  home: http://thispage.tech
+maintainer: Jcak Lee
+repository: https://github.com/jacklee1995/flutter_app_service
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
@@ -10,14 +15,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  get: ^4.6.6
   flex_color_scheme: ^7.3.1
   flutter_svg: ^2.0.9
-  get_it: ^7.6.7
-
   dash_flags: ^0.1.1
-  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
