--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   flex_color_scheme: ^7.3.1
   flutter_svg: ^2.0.9
   dash_flags: ^0.1.1
+  shared_preferences: ^2.2.2
+  get: ^4.6.6
+  get_it: ^7.6.7
+  flutter_settings_ui: ^3.0.0
 
 dev_dependencies:
   flutter_test:
